--- a/_pages/Codes.html
+++ b/_pages/Codes.html
@@ -74,7 +74,9 @@ author_profile: true
 
     <!-- 提示框 -->
     <div class="notice">
-        Please find below a description of some of the codes that I have developed during my research. In most cases, the source code is also provided. Please remember to cite the corresponding paper(s) if you use any of these codes for research or industrial purposes. Do not hesitate to contact me if you have any questions.
+        Please find below a description of some of the codes that I have developed during my research. 
+        Please remember to cite the corresponding paper(s) if you use any of these codes for research or industrial purposes. 
+        Do not hesitate to contact me if you have any questions.
     </div>
 
     <!-- 代码部分 -->
@@ -85,9 +87,9 @@ author_profile: true
         <div class="code-item">
             <!-- 文字内容部分 -->
             <div class="code-text">
-                <a href="#" class="code-title">TDS SIMULATOR: AN APP FOR TEMPERATURE-PROGRAMMED HYDROGEN DESORPTION</a>
+                <a href="#" class="code-title">RUC model: an effective model for the local mechanical analysis of submarine power cables</a>
                 <p>
-                    MATLAB App to rigorously simulate hydrogen desorption with the main hydrogen transport and trapping models (Oriani, McNabb-Foster) and arbitrary trapping characteristics. See <a href="https://tdssimulator.web.ox.ac.uk/" target="_blank">https://tdssimulator.web.ox.ac.uk/</a>
+                    A FORTRAN code and a python code are provided. The former is for the periodical boundary conditions while the latter is for the beam and shell element in pre-processing process.
                 </p>
                 <p>
                     Paper: E. García-Macías, Z.D. Harris, E. Martínez-Pañeda. TDS Simulator: A MATLAB App to model temperature-programmed hydrogen desorption. International Journal of Hydrogen Energy (2024)
