--- a/_pages/Codes.html
+++ b/_pages/Codes.html
@@ -92,7 +92,8 @@ author_profile: true
                     A FORTRAN code and a python code are provided. The former is for the periodical boundary conditions while the latter is for the beam and shell element in pre-processing process.
                 </p>
                 <p>
-                    Paper: E. García-Macías, Z.D. Harris, E. Martínez-Pañeda. TDS Simulator: A MATLAB App to model temperature-programmed hydrogen desorption. International Journal of Hydrogen Energy (2024)
+                    Paper:  <b>Fang, P.</b>, Li, X., Jiang, X., Hopman, H. and Bai, Y., 2024. Development of an effective modeling method for the mechanical analysis of three-core submarine power cables under tension. Engineering Structures, 317, p.118632. <a href="https://www.sciencedirect.com/science/article/pii/S0141029624011945">Link</a><br>
+                            <b>Fang, P.</b>, Li, X., Jiang, X., Hopman, H. and Bai, Y., 2023. Bending study of submarine power cables based on a repeated unit cell model. Engineering Structures, 293, p.116606. <a href="https://www.sciencedirect.com/science/article/pii/S0141029623010210">Link</a><br>
                 </p>
                 <a href="#" class="download-link">Download code (.zip file)</a>
             </div>
