--- a/_pages/Codes.html
+++ b/_pages/Codes.html
@@ -99,7 +99,7 @@ author_profile: true
             </div>
             
             <!-- 图片部分 -->
-            <img src="path/to/your/image.png" alt="TDS Simulator Image" class="code-image">
+            <img src="https://pan-fang.github.io/images/SPC-3.png" alt="Submarine power cables-3" class="code-image">
         </div>
     </div>
 
