--- a/_pages/Codes.html
+++ b/_pages/Codes.html
@@ -95,8 +95,7 @@ author_profile: true
                     Paper:  <b>Fang, P.</b>, Li, X., Jiang, X., Hopman, H. and Bai, Y., 2024. Development of an effective modeling method for the mechanical analysis of three-core submarine power cables under tension. Engineering Structures, 317, p.118632. <a href="https://www.sciencedirect.com/science/article/pii/S0141029624011945">Link</a><br>
                             <b>Fang, P.</b>, Li, X., Jiang, X., Hopman, H. and Bai, Y., 2023. Bending study of submarine power cables based on a repeated unit cell model. Engineering Structures, 293, p.116606. <a href="https://www.sciencedirect.com/science/article/pii/S0141029623010210">Link</a><br>
                 </p>
-                <a href="https://pan-fang.github.io/assets/webfonts/RUC code.zip" class="download-link">Download code (.zip file)</a>
-                
+                <a href="https://pan-fang.github.io/assets/RUC code.zip" class="download-link">Download code (.zip file)</a>
             </div>
             
             <!-- 图片部分 -->
