--- a/_pages/Codes.html
+++ b/_pages/Codes.html
@@ -29,6 +29,7 @@ author_profile: true
             border-radius: 5px;
             background-color: #f9f9f9;
             margin-bottom: 20px;
+            font-size: 16px; /* 调整字体大小 */
         }
         
         /* 代码部分标题 */
