--- a/_pages/Codes.html
+++ b/_pages/Codes.html
@@ -1,9 +1,4 @@
----
-layout: archive
-title: "Codes"
-permalink: /Codes/
-author_profile: true
----
+
 
 <!-- 在这里添加自己的所有Codes简介 -->
 
@@ -12,7 +7,7 @@ author_profile: true
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <title>Research Codes</title>
     <style>
         /* 整体布局 */
         body {
