--- a/_pages/Codes.html
+++ b/_pages/Codes.html
@@ -28,7 +28,7 @@ author_profile: true
             border-radius: 5px;
             background-color: #f9f9f9;
             margin-bottom: 20px;
-            font-size: 16px; /* 调整字体大小 */
+            font-size: 22px; /* 调整字体大小 */
         }
         
         /* 代码部分标题 */
@@ -40,7 +40,8 @@ author_profile: true
         .code-item {
             display: flex;
             align-items: center;
-            border-bottom: 1px solid #ccc;
+            border-top: 1px solid #ccc;   /* 顶部边框 */
+            border-bottom: 1px solid #ccc; /* 底部边框 */
             padding: 15px 0;
         }
         
