--- a/_pages/Codes.html
+++ b/_pages/Codes.html
@@ -48,6 +48,7 @@ author_profile: true
         /* 代码条目文字内容样式 */
         .code-text {
             flex: 1;
+            font-size: 20px; /* 调整字体大小 */
         }
         
         /* 代码条目标题样式 */
