--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -15,11 +15,10 @@ author_profile: true
 
 <p><u>Journal papers:</u></p>
 
-
+<!-- 文献的链接直接从网站上拷贝过来 -->
 10. <b>Fang, P.</b>, Li, X., Jiang, X., Hopman, H., & Bai, Y. (2025). Methods for the local mechanical analysis of submarine power cables:
-A systematic literature review. Marine Structures, 101, 103763. <a href="https://www.sciencedirect.com/science/article/pii/S0141029624011945">Link</a>
+A systematic literature review. Marine Structures, 101, 103763. <a href="https://www.sciencedirect.com/science/article/pii/S0951833924001916?casa_token=ECageDhQUB0AAAAA:OLN2vP1eErytvQh_p3DN37g-ZyIlL17tKyK74y45zZYvOwdi30NTUt9lQXE-PxtXn1iYTz29">Link</a>
 <br>
-
 
 9. <b>Fang, P.</b>, Li, X., Jiang, X., Hopman, H. and Bai, Y., 2024. Development of an effective modeling method for the mechanical analysis of three-core submarine power cables under tension. Engineering Structures, 317, p.118632. <a href="https://www.sciencedirect.com/science/article/pii/S0141029624011945">Link</a>
 <br>
