--- a/_pages/Codes.html
+++ b/_pages/Codes.html
@@ -103,6 +103,26 @@ author_profile: true
             <!-- 图片部分 -->
             <img src="https://pan-fang.github.io/images/SPC-3.png" alt="Submarine power cables-3" class="code-image">
         </div>
+
+
+
+        <!-- 单个代码条目 第二块代码区 -->
+        <div class="code-item">
+            <!-- 文字内容部分 -->
+            <div class="code-text">
+                <a href="#" class="code-title">User-defined materials: bending analysis of submarine power cables under multi-physical effects</a>
+                <p>
+                    A FORTRAN code for an user-defined material accounting the temperature effect is provided. To be uploaded soon!
+                </p>
+            </div>
+            
+            <!-- 图片部分 -->
+            <img src="https://pan-fang.github.io/images/SPC-3.png" alt="Submarine power cables-3" class="code-image">
+        </div>
+
+
+
+        
     </div>
 
 </body>
