--- a/_pages/Codes.html
+++ b/_pages/Codes.html
@@ -85,7 +85,7 @@ author_profile: true
     <div class="code-section">
         <h2>Codes</h2>
         
-        <!-- 单个代码条目 -->
+        <!-- 单个代码条目 第一块代码区-->
         <div class="code-item">
             <!-- 文字内容部分 -->
             <div class="code-text">
