--- a/_pages/Codes.html
+++ b/_pages/Codes.html
@@ -117,7 +117,7 @@ author_profile: true
             </div>
             
             <!-- 图片部分 -->
-            <img src="https://pan-fang.github.io/images/SPC-3.png" alt="Submarine power cables-3" class="code-image">
+            <img src="https://pan-fang.github.io/images/UMATDevelopment.png" alt="UMATDevelopment" class="code-image">
         </div>
 
 
