--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -16,7 +16,7 @@ author_profile: true
 <p><u>Journal papers:</u></p>
 
 <!-- 文献的链接直接从网站上拷贝过来 -->
-11. <b>Fang, P.</b>, Li, X., Jiang, X., Hopman, H. and Bai, Y., 2025. Development of an effective modelling method for the mechanical analysis of submarine power cables under bending. Composite Structures, p.119198. . <a href="https://www.sciencedirect.com/science/article/pii/S0951833924001916?casa_token=ECageDhQUB0AAAAA:OLN2vP1eErytvQh_p3DN37g-ZyIlL17tKyK74y45zZYvOwdi30NTUt9lQXE-PxtXn1iYTz29">Link</a>
+11. <b>Fang, P.</b>, Li, X., Jiang, X., Hopman, H. and Bai, Y., 2025. Development of an effective modelling method for the mechanical analysis of submarine power cables under bending. Composite Structures, p.119198. . <a href="https://www.sciencedirect.com/science/article/pii/S0263822325003630">Link</a>
 <br>
 
 
