--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -16,6 +16,10 @@ author_profile: true
 <p><u>Journal papers:</u></p>
 
 <!-- 文献的链接直接从网站上拷贝过来 -->
+12. <b>Fang, P.</b>, Li, X., Jiang, X., Hopman, H. and Bai, Y., 2026. Torsional and tension–bending analysis of a three-core submarine power cable. Marine Structures, 105, p.103896. <a href="https://www.sciencedirect.com/science/article/pii/S0951833925001194">Link</a>
+<br>
+
+
 11. <b>Fang, P.</b>, Li, X., Jiang, X., Hopman, H. and Bai, Y., 2025. Development of an effective modelling method for the mechanical analysis of submarine power cables under bending. Composite Structures, p.119198. . <a href="https://www.sciencedirect.com/science/article/pii/S0263822325003630">Link</a>
 <br>
 
