--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -16,6 +16,10 @@ author_profile: true
 <p><u>Journal papers:</u></p>
 
 <!-- 文献的链接直接从网站上拷贝过来 -->
+
+13.  <b>Fang, P.</b>, Li, X., Jiang, X., Hopman, H. and Bai, Y., 2026. Torsional and tension–bending analysis of a three-core submarine power cable. Engineering Structures, 351, p.121956. <a href="https://www.sciencedirect.com/science/article/pii/S0141029625023478">Link</a>
+<br>
+
 12. <b>Fang, P.</b>, Li, X., Jiang, X., Hopman, H. and Bai, Y., 2026. Torsional and tension–bending analysis of a three-core submarine power cable. Marine Structures, 105, p.103896. <a href="https://www.sciencedirect.com/science/article/pii/S0951833925001194">Link</a>
 <br>
 
