Update author formatting in publication list

--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -17,31 +17,31 @@ author_profile: true
 
 <!-- 文献的链接直接从网站上拷贝过来 -->
 
-13.  <b>Fang, P.</b>, Li, X., Jiang, X., Hopman, H. and Bai, Y., 2026. Torsional and tension–bending analysis of a three-core submarine power cable. Engineering Structures, 351, p.121956. <a href="https://www.sciencedirect.com/science/article/pii/S0141029625023478">Link</a>
+13.  <b>Fang, P.*</b>, Li, X., Jiang, X., Hopman, H. and Bai, Y., 2026. Torsional and tension–bending analysis of a three-core submarine power cable. Engineering Structures, 351, p.121956. <a href="https://www.sciencedirect.com/science/article/pii/S0141029625023478">Link</a>
 <br>
 
-12. <b>Fang, P.</b>, Li, X., Jiang, X., Hopman, H. and Bai, Y., 2026. Torsional and tension–bending analysis of a three-core submarine power cable. Marine Structures, 105, p.103896. <a href="https://www.sciencedirect.com/science/article/pii/S0951833925001194">Link</a>
-<br>
-
-
-11. <b>Fang, P.</b>, Li, X., Jiang, X., Hopman, H. and Bai, Y., 2025. Development of an effective modelling method for the mechanical analysis of submarine power cables under bending. Composite Structures, p.119198. . <a href="https://www.sciencedirect.com/science/article/pii/S0263822325003630">Link</a>
+12. <b>Fang, P.*</b>, Li, X., Jiang, X., Hopman, H. and Bai, Y., 2026. Torsional and tension–bending analysis of a three-core submarine power cable. Marine Structures, 105, p.103896. <a href="https://www.sciencedirect.com/science/article/pii/S0951833925001194">Link</a>
 <br>
 
 
-10. <b>Fang, P.</b>, Li, X., Jiang, X., Hopman, H., & Bai, Y. (2025). Methods for the local mechanical analysis of submarine power cables:
+11. <b>Fang, P.*</b>, Li, X., Jiang, X., Hopman, H. and Bai, Y., 2025. Development of an effective modelling method for the mechanical analysis of submarine power cables under bending. Composite Structures, p.119198. . <a href="https://www.sciencedirect.com/science/article/pii/S0263822325003630">Link</a>
+<br>
+
+
+10. <b>Fang, P.*</b>, Li, X., Jiang, X., Hopman, H., & Bai, Y. (2025). Methods for the local mechanical analysis of submarine power cables:
 A systematic literature review. Marine Structures, 101, 103763. <a href="https://www.sciencedirect.com/science/article/pii/S0951833924001916?casa_token=ECageDhQUB0AAAAA:OLN2vP1eErytvQh_p3DN37g-ZyIlL17tKyK74y45zZYvOwdi30NTUt9lQXE-PxtXn1iYTz29">Link</a>
 <br>
 
-9. <b>Fang, P.</b>, Li, X., Jiang, X., Hopman, H. and Bai, Y., 2024. Development of an effective modeling method for the mechanical analysis of three-core submarine power cables under tension. Engineering Structures, 317, p.118632. <a href="https://www.sciencedirect.com/science/article/pii/S0141029624011945">Link</a>
+9. <b>Fang, P.*</b>, Li, X., Jiang, X., Hopman, H. and Bai, Y., 2024. Development of an effective modeling method for the mechanical analysis of three-core submarine power cables under tension. Engineering Structures, 317, p.118632. <a href="https://www.sciencedirect.com/science/article/pii/S0141029624011945">Link</a>
 <br>
 
-8. <b>Fang, P.</b>, Li, X., Jiang, X., Hopman, H. and Bai, Y., 2023. Bending study of submarine power cables based on a repeated unit cell model. Engineering Structures, 293, p.116606. <a href="https://www.sciencedirect.com/science/article/pii/S0141029623010210">Link</a>
+8. <b>Fang, P.*</b>, Li, X., Jiang, X., Hopman, H. and Bai, Y., 2023. Bending study of submarine power cables based on a repeated unit cell model. Engineering Structures, 293, p.116606. <a href="https://www.sciencedirect.com/science/article/pii/S0141029623010210">Link</a>
 <br>
 
-7. <b>Fang, P.</b>, Xu, Y., Gao, Y., Ali, L. and Bai, Y., 2022. Mechanical responses of a fiberglass flexible pipe subject to tension & internal pressure. Thin-Walled Structures, 181, p.110107. <a href="https://www.sciencedirect.com/science/article/pii/S0263823122006590">Link</a>
+7. <b>Fang, P.*</b>, Xu, Y., Gao, Y., Ali, L. and Bai, Y., 2022. Mechanical responses of a fiberglass flexible pipe subject to tension & internal pressure. Thin-Walled Structures, 181, p.110107. <a href="https://www.sciencedirect.com/science/article/pii/S0263823122006590">Link</a>
 <br>
 
-6. <b>Fang, P.</b>, Jiang, X., Hopman, H. and Bai, Y., 2021. Mechanical responses of submarine power cables subject to axisymmetric loadings. Ocean Engineering, 239, p.109847. <a href="https://www.sciencedirect.com/science/article/pii/S0029801821011999">Link</a>
+6. <b>Fang, P.*</b>, Jiang, X., Hopman, H. and Bai, Y., 2021. Mechanical responses of submarine power cables subject to axisymmetric loadings. Ocean Engineering, 239, p.109847. <a href="https://www.sciencedirect.com/science/article/pii/S0029801821011999">Link</a>
 <br>
 
 5. <b>Fang, P.</b>, Yuan, S., Cheng, P., Bai, Y. and Xu, Y., 2019. Mechanical responses of metallic strip flexible pipes subjected to pure torsion. Applied Ocean Research, 86, pp.13-27. <a href="https://www.sciencedirect.com/science/article/pii/S0141118718307053">Link</a>
